[gd_scene load_steps=4 format=4 uid="uid://bes6isemuwp5c"]

[ext_resource type="Script" uid="uid://bnigd7jhkbv70" path="res://scenes/levels/Kitchen/Kitchen.gd" id="1_17jfl"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_vb35a"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_t4r4q"]

[node name="Kitchen" type="Node2D" unique_id=339914363]
script = ExtResource("1_17jfl")

[node name="Ground" type="TileMapLayer" parent="." unique_id=611594436]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAAFAAUAAAAlAAAAAAAFAAYAAAAlAAEAAAAFAAcAAAAlAAIAAAAFAAgAAAAgAAAAAAAGAAUAAAAmAAAAAAAGAAYAAAAmAAEAAAAGAAcAAAAmAAIAAAAGAAgAAAAhAAAAAAAHAAUAAAAkAAEAAAAHAAYAAAAkAAIAAAAHAAcAAAAjAAIAAAAHAAgAAAAiAAAAAAAIAAUAAAAuAAsAAAAIAAgAAAAgAAEAAAAJAAQAAAAtAAoAAAAJAAUAAAAtAAsAAAAJAAYAAAAtAAoAAAAJAAgAAAAhAAEAAAAKAAQAAAAuAAoAAAAKAAUAAAAuAAsAAAAKAAYAAAAuAAoAAAAKAAgAAAAiAAEAAAAKAAkAAAAhAAIAAAAKAAoAAAA+AAAAAAALAAQAAAAtAAoAAAALAAUAAAAtAAsAAAALAAYAAAAtAAoAAAALAAcAAAAuAAoAAAALAAgAAAAjAAEAAAALAAkAAAAiAAIAAAALAAoAAAA+AAAAAAAMAAQAAAAuAAoAAAAMAAUAAAAuAAsAAAAMAAYAAAAuAAoAAAAMAAgAAAAhAAEAAAANAAQAAAAtAAoAAAANAAUAAAAtAAsAAAANAAYAAAAtAAoAAAANAAgAAAAgAAIAAAAOAAQAAAAuAAoAAAAOAAUAAAAuAAsAAAAOAAYAAAAuAAoAAAAOAAgAAAAgAAEAAAAPAAQAAAAkAAEAAAAPAAUAAAAkAAIAAAAPAAYAAAAjAAEAAAAPAAcAAAAjAAIAAAAPAAgAAAAiAAIAAAAQAAQAAAAmAAEAAAAQAAUAAAAmAAIAAAAQAAYAAAAgAAEAAAAQAAcAAAAjAAEAAAAQAAgAAAAjAAIAAAARAAYAAAAhAAEAAAASAAYAAAAiAAAAAAATAAYAAAAgAAIAAAA=")
tile_set = ExtResource("2_vb35a")

[node name="Floor" type="TileMapLayer" parent="." unique_id=397089216]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_vb35a")

[node name="PressPlates" type="TileMapLayer" parent="." unique_id=529314070]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_vb35a")

[node name="Liquids" type="TileMapLayer" parent="." unique_id=1792142689]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_vb35a")

[node name="Walls" type="TileMapLayer" parent="." unique_id=1903488836]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAAEAAQAAAA0AAEAAAAEAAUAAAAzAAIAAAAEAAYAAAAzAAIAAAAEAAcAAAAzAAIAAAAEAAgAAAAzAAIAAAAEAAkAAAA0AAIAAAAFAAQAAAA1AAAAAAAFAAkAAAA1AAAAAAAGAAQAAAA1AAAAAAAGAAkAAAA1AAAAAAAHAAQAAAA2AAAAAAAHAAkAAAA1AAAAAAAIAAMAAAA5AAEAAAAIAAQAAAA4AAMAAAAIAAYAAAAzAAEAAAAIAAcAAAA0AAIAAAAIAAkAAAA1AAAAAAAJAAMAAAA6AAAAAAAJAAQAAAAWABUAAAAJAAcAAAA1AAAAAAAJAAkAAAA2AAAAAAAKAAMAAAA6AAAAAAAKAAQAAAAXABUAAAAKAAcAAAA2AAAAAAALAAMAAAA6AAAAAAALAAQAAAATABYAAAAMAAMAAAA6AAAAAAAMAAQAAAAWABUAAAAMAAcAAAA0AAAAAAAMAAkAAAA0AAAAAAANAAMAAAA6AAAAAAANAAQAAAAXABUAAAANAAcAAAA1AAAAAAANAAkAAAA1AAAAAAAOAAMAAAA6AAMAAAAOAAQAAAA4AAIAAAAOAAUAAAA4AAMAAAAOAAcAAAA2AAAAAAAOAAkAAAA1AAAAAAAPAAMAAAA8AAEAAAAPAAkAAAA1AAAAAAAQAAMAAAA3AAAAAAAQAAkAAAA1AAAAAAARAAMAAAA1AAEAAAARAAQAAAAzAAIAAAARAAUAAAA0AAIAAAARAAcAAAA2AAMAAAARAAgAAAAzAAIAAAARAAkAAAA1AAIAAAASAAUAAAA1AAAAAAASAAcAAAA1AAAAAAATAAUAAAA2AAAAAAATAAYAAAAFAAoAAAATAAcAAAA/AAAAAAA=")
tile_set = ExtResource("2_vb35a")

[node name="Trails" type="TileMapLayer" parent="." unique_id=1243318801]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_vb35a")

[node name="Items" type="TileMapLayer" parent="." unique_id=1444495758]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_vb35a")

[node name="Demolitonist" parent="Items" unique_id=343700847 instance=ExtResource("3_t4r4q")]
z_index = 3
z_as_relative = false
position = Vector2(264, 113)

[node name="Trees" type="TileMapLayer" parent="." unique_id=1039656919]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_vb35a")

[node name="BadItems" type="TileMapLayer" parent="." unique_id=781733838]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAAFAAUAAAANABUAAAAFAAcAAAANABUAAAAGAAUAAAAOABUAAAAGAAYAAAAOABMAAAAGAAcAAAAOABUAAAAIAAUAAAAEAAwAAAAJAAUAAAAIAA4AAAALAAYAAAAOABMAAAALAAcAAAATAA8AAAAMAAUAAAAOABMAAAAMAAYAAAAOABMAAAAMAAgAAAALAA8AAAANAAUAAAAOABMAAAANAAYAAAAOABMAAAAOAAYAAAAEAAwAAAAOAAgAAAAOABMAAAAPAAQAAAAKAA4AAAAQAAQAAAALAA4AAAAQAAUAAAALAA8AAAAQAAYAAAAOABMAAAAQAAgAAAAOABMAAAA=")
tile_set = ExtResource("2_vb35a")

[node name="GoodItems" type="TileMapLayer" parent="." unique_id=488531598]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAAFAAUAAAAVABMAAAAFAAcAAAARABMAAAAGAAUAAAAWABMAAAAGAAYAAAAOABIAAAAIAAUAAAAFAAoAAAALAAYAAAAOABIAAAALAAcAAAAEAAsAAAAMAAUAAAAPABAAAAAMAAYAAAAPABIAAAAMAAgAAAANAA8AAAANAAUAAAAQABAAAAANAAYAAAAQABIAAAAOAAYAAAAFAAoAAAAOAAgAAAAPAA4AAAAPAAQAAAASAAoAAAAQAAQAAAATAAoAAAAQAAUAAAAMAA8AAAAQAAYAAAAfABMAAAAQAAgAAAAKABMAAAAGAAcAAAAVABMAABA=")
tile_set = ExtResource("2_vb35a")

[node name="MovingItems" type="TileMapLayer" parent="." unique_id=678662330]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_vb35a")
